# stm32-examples

./: .gitmodules  CMakeLists.txt  README.md
assembly_code_01/: CMakeLists.txt  assembly_code_01.c  startup.s
blink/: CMakeLists.txt  blink.c
blink02/: CMakeLists.txt  blink02.c
boards/STM32F4-Discovery/: CMakeLists.txt  board_setup.c  stm32f4xx_hal_conf.h
boards/stm32f4-custom/: CMakeLists.txt  board_setup.c  board_setup.h  flash.ld  stm32f4xx_hal_conf.h
can/: CMakeLists.txt
can/can_pulling/: CMakeLists.txt  can_pulling.c
gpio/: CMakeLists.txt  gpio.c
semihosting/: CMakeLists.txt  semihosting.c
spi/: CMakeLists.txt
spi/spi_master/: CMakeLists.txt  spi_master.c
spi/spi_slave/: CMakeLists.txt  spi_slave.c
swv/: CMakeLists.txt  swv.c
uart/: CMakeLists.txt  uart.c
uart/uart_pulling/: CMakeLists.txt  uart_pulling.c
